# eviacam

./: .cproject  .gitattributes  .gitignore  .project  AGRAIMENTS.txt  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.es  Makefile.am  Makefile.in  NEWS  README  README.ca  README.es  THANKS  TODO  aclocal.m4  autogen.sh  build.sh  config.h.in  configure  configure.ac  configure.in  crvcamera.cpp  crvcamera.h  crvcamera_cv.cpp  crvcamera_enum.cpp  crvcamera_v4l2.cpp  crvcamera_v4l2.h  crvcamera_wdm.cpp  crvcolor.cpp  crvcolor.h  crvgeomtry.cpp  crvimage.cpp  crvimage.h  crvmisc.h  crvnormroi.cpp  crvnormroi.h  (+7 more)
creavision/: CMakeLists.txt  CreaVision_eviacam.vcproj  CreaVision_eviacam.vcxproj  CreaVision_eviacam.vcxproj.filters  Makefile.am  Makefile.in  SampleGrabber.h  colorspaces.cpp  colorspaces.h  crvcamera.cpp  crvcamera.h  crvcamera_cv.cpp  crvcamera_cv.h  crvcamera_enum.cpp  crvcamera_enum.h  crvcamera_v4l2.cpp  crvcamera_v4l2.h  crvcamera_wdm.cpp  crvcamera_wdm.h  crvcolor.cpp  crvcolor.h  crvgeomtry.cpp  crvgeomtry.h  crvhistogram.cpp  crvhistogram.h  crvimage.cpp  crvimage.h  crvmisc.cpp  crvmisc.h  crvnormroi.cpp  crvnormroi.h  crvskindetection.cpp  crvskindetection.h  defs.h  pwc-ioctl.h  qedit.h  videoInput.cpp  videoInput.h
creavision/fixvfwfps/: fixvfwfps.vcproj  main.cpp
creavision/libwebcam/: README  compat.h  incvideodev.h.in  libwebcam.c  webcam.h
doc/: Makefile.am  Makefile.in  haarcascade_frontalface_default.xml  license.txt  readme.txt
doc/cat/hhp/: doc-0003.htd  doc-0003.htm  doc-0004.htd  doc-0004.htm  doc-0007.htd  doc-0007.htm  doc-0008.htd  doc-0008.htm  doc-0009.htd  doc-0009.htm  doc-0011.htd  doc-0011.htm  doc-0012.htd  doc-0012.htm  doc-0013.htd  doc-0013.htm  help.hhc  help.htb  help.wxh  help.wxh.bak
doc/cat/htm/: calibration.htm  calibration.htm~  click.htm  click.htm~  click_bar.htm  click_bar.htm~  environment.htm  environment.htm~  intro.htm  intro.htm~  options.htm  options.htm~  webcam.htm  webcam.htm~  wizard.htm  wizard.htm~
doc/eng/: calibration.htm  click.htm  click_bar.htm  general_options.htm  profile_options_advanced.htm  profile_options_click.htm  profile_options_motion.htm  profile_options_workspace.htm  wizard.htm
doc/eng/hhp/: doc-0003.htd  doc-0003.htm  doc-0004.htd  doc-0004.htm  doc-0007.htd  doc-0007.htm  doc-0008.htd  doc-0008.htm  doc-0009.htd  doc-0009.htm  doc-0011.htd  doc-0011.htm  doc-0012.htd  doc-0012.htm  doc-0013.htd  doc-0013.htm  eviacam_doc.hhk  help.hhc  help.htb  help.wxh  macros.h
doc/eng/htm/: calibration.htm  click.htm  click_bar.htm  environment.htm  intro.htm  options.htm  webcam.htm  wizard.htm
doc/esp/hhp/: doc-0003.htd  doc-0003.htm  doc-0004.htd  doc-0004.htm  doc-0007.htd  doc-0007.htm  doc-0008.htd  doc-0008.htm  doc-0009.htd  doc-0009.htm  doc-0011.htd  doc-0011.htm  doc-0012.htd  doc-0012.htm  doc-0013.htd  doc-0013.htm  help.hhc  help.hhk  help.htb  help.wxh  help.wxh.bak
doc/esp/htm/: calibration.htm  calibration.htm~  click.htm  click_bar.htm  click_bar.htm~  environment.htm  environment.htm~  intro.htm  options.htm  options.htm~  webcam.htm  webcam.htm~  wizard.htm  wizard.htm~
doc/help/: normal.css
doc/help/ca/: calibration.htm  click.htm  click_bar.htm  (+10 more)
libwebcam/: CMakeLists.txt  Makefile.am  Makefile.in  README.eviacam  compat.h  libwebcam.c  libwebcam.h  uvcvideo.h  webcam.h
rpm/: Makefile.am  Makefile.in  eviacam.spec  eviacam.spec.in
src/: Makefile.am  Makefile.in  activationkey.cpp  activationkey.h  cautostart.cpp  cautostart.h  cautostart_win.cpp  cautostart_win.h  cautostart_xdg.h  checkupdates.cpp  checkupdates.h  checkupdates_listener.cpp  checkupdates_listener.h  checkupdates_manager.cpp  checkupdates_manager.h  checkupdates_ui.cpp  checkupdates_ui.h  ckeyboardcode.cpp  ckeyboardcode.h  ckeyboardcontrol.cpp  ckeyboardcontrol.h  clickwindow.cpp  clickwindow.h  clickwindowbitmap.cpp  clickwindowbitmap.h  clickwindowbitmapvertical.cpp  clickwindowbitmapvertical.h  clickwindowcontroller.cpp  clickwindowcontroller.h  clickwindowtext.cpp  clickwindowtext.h  clickwindowvertical.cpp  clickwindowvertical.h  cmotioncalibration.cpp  cmotioncalibration.h  cvisualalert.cpp  cvisualalert.h  dwellclick.cpp  dwellclick.h  eviacam.desktop  (+63 more)
src/icons/: buttonDblLeft.xpm  buttonDblLeftDisabled.xpm  buttonDblLeftLocked.xpm  buttonDblLeftSelected.xpm  buttonDblLeftSelectedLocked.xpm  buttonDrag.xpm  buttonDragDisabled.xpm  buttonDragLocked.xpm  buttonDragSelected.xpm  buttonDragSelectedLocked.xpm  buttonHideMainWindow.xpm  buttonLeft.xpm  buttonLeftDisabled.xpm  buttonLeftLocked.xpm  buttonLeftSelected.xpm  buttonLeftSelectedLocked.xpm  buttonMiddle.xpm  buttonMiddleDisabled.xpm  buttonMiddleLocked.xpm  buttonMiddleSelected.xpm  buttonMiddleSelectedLocked.xpm  buttonNoClick.xpm  buttonNoClickSelected.xpm  buttonRight.xpm  buttonRightDisabled.xpm  buttonRightLocked.xpm  buttonRightSelected.xpm  buttonRightSelectedLocked.xpm  buttonShowMainWindow.xpm  clickwindow.xpm  clickwindowoff.xpm  eviacam.xpm  eviacam_mini.xpm  eviacam_small.xpm  help.xpm  keyboard.xpm  off.xpm  on.xpm  preferences.xpm  user.xpm  (+2 more)
src/resources/: buttonDblLeft.xpm  buttonDblLeftSelected.xpm  buttonDragDisabled.xpm  buttonDragLocked.xpm  buttonDragSelectedLocked.xpm  buttonLeft.xpm  buttonMiddleDisabled.xpm  buttonMiddleSelectedLocked.xpm  buttonRight.xpm  buttonRightLocked.xpm  clickWindowBitmap.xrc  clickWindowBitmapVertical.xrc  clickWindowText.xrc  clickWindowTextVertical.xrc  help.xpm  keyboard.xpm  off.xpm  on.xpm  user.xpm
wxcamwindow/: Makefile.am  Makefile.in  camwindow.cpp  camwindow.h  capturethread.cpp  capturethread.h  visiblenormroi.cpp  visiblenormroi.h  wxcamwindow.vcproj  wxcamwindow.vcxproj  wxcamwindow.vcxproj.filters  wxnormroi.cpp  wxnormroi.h
wxutil/: Makefile.am  Makefile.in  configbase.cpp  configbase.h  configmanager.cpp  configmanager.h  dwellaction.cpp  dwellaction.h  mousecontrol.cpp  mousecontrol.h  timeutil.cpp  timeutil.h  waittime.cpp  waittime.h  warnbaroverlap.cpp  warnbaroverlap.h  wxappbar.cpp  wxappbar.h  wxutil.vcproj  wxutil.vcxproj  wxutil.vcxproj.filters
(+193 files in other folders)
