# the SUBDIRS is filled automatically by am_edit. If files are 
# in this directory they are installed into the english dir

SUBDIRS = $(AUTODIRS)  
dist_pkgdata_DATA= appc_logo.png  stsi_logo.png  guadalinfo_logo.png eviacam_logo.png fve.png click.wav click2.wav

dist_noinst_DATA= opencvlicense.txt

nobase_dist_pkgdata_DATA= ./help/normal.css ./help/eviacam.png \
help/en/advanced_options.png help/en/calibration.htm help/en/click_bar.png help/en/click_bar_thin.png help/en/click.htm help/en/click_options.png help/en/confirm_calibration.png help/en/contents.htm help/en/doc-0001.htn help/en/doc-0002.htn help/en/environment.htm help/en/environment.png help/en/fps.png help/en/general_options.png help/en/help.hhc help/en/help.hhk help/en/help.hhp help/en/help.wxh help/en/hotkeys_options.png help/en/intro.htm help/en/main_window.png help/en/motion_options.png help/en/options.htm help/en/task_bar_icon.png help/en/webcam.htm help/en/wizard1.png help/en/wizard2.png help/en/wizard3.png help/en/wizard4.png help/en/wizard5.png help/en/wizard6.png help/en/wizard7.png help/en/wizard8.png help/en/wizard.htm help/en/workspace_options.png help/en/x_axis_calibration.png help/en/y_axis_calibration.png \
help/es/advanced_options.png help/es/calibration.htm help/es/click_bar.png help/es/click_bar_thin.png help/es/click.htm help/es/click_options.png help/es/confirm_calibration.png help/es/contents.htm help/es/doc-0001.htn help/es/doc-0002.htn help/es/environment.htm help/es/environment.png help/es/fps.png help/es/general_options.png help/es/help.hhc help/es/help.hhk help/es/help.hhp help/es/help.wxh help/es/hotkeys_options.png help/es/intro.htm help/es/main_window.png help/es/motion_options.png help/es/options.htm help/es/task_bar_icon.png help/es/webcam.htm help/es/wizard1.png help/es/wizard2.png help/es/wizard3.png help/es/wizard4.png help/es/wizard5.png help/es/wizard6.png help/es/wizard7.png help/es/wizard8.png help/es/wizard.htm help/es/workspace_options.png help/es/x_axis_calibration.png help/es/y_axis_calibration.png \
help/ca/advanced_options.png help/ca/calibration.htm help/ca/click_bar.png help/ca/click_bar_thin.png help/ca/click.htm help/ca/click_options.png help/ca/confirm_calibration.png help/ca/contents.htm help/ca/doc-0001.htn help/ca/doc-0002.htn help/ca/environment.htm help/ca/environment.png help/ca/fps.png help/ca/general_options.png help/ca/help.hhc help/ca/help.hhk help/ca/help.hhp help/ca/help.wxh help/ca/hotkeys_options.png help/ca/intro.htm help/ca/main_window.png help/ca/motion_options.png help/ca/options.htm help/ca/task_bar_icon.png help/ca/webcam.htm help/ca/wizard1.png help/ca/wizard2.png help/ca/wizard3.png help/ca/wizard4.png help/ca/wizard5.png help/ca/wizard6.png help/ca/wizard7.png help/ca/wizard8.png help/ca/wizard.htm help/ca/workspace_options.png help/ca/x_axis_calibration.png help/ca/y_axis_calibration.png \
help/de/advanced_options.png help/de/calibration.htm help/de/click_bar.png help/de/click_bar_thin.png help/de/click.htm help/de/click_options.png help/de/confirm_calibration.png help/de/contents.htm help/de/doc-0001.htn help/de/doc-0002.htn help/de/environment.htm help/de/environment.png help/de/fps.png help/de/general_options.png help/de/help.hhc help/de/help.hhk help/de/help.hhp help/de/help.wxh help/de/hotkeys_options.png help/de/intro.htm help/de/main_window.png help/de/motion_options.png help/de/options.htm help/de/task_bar_icon.png help/de/webcam.htm help/de/wizard1.png help/de/wizard2.png help/de/wizard3.png help/de/wizard4.png help/de/wizard5.png help/de/wizard6.png help/de/wizard7.png help/de/wizard8.png help/de/wizard.htm help/de/workspace_options.png help/de/x_axis_calibration.png help/de/y_axis_calibration.png \
help/gl/advanced_options.png help/gl/calibration.htm help/gl/click_bar.png help/gl/click_bar_thin.png help/gl/click.htm help/gl/click_options.png help/gl/confirm_calibration.png help/gl/contents.htm help/gl/environment.htm help/gl/environment.png help/gl/fps.png help/gl/general_options.png help/gl/help.hhc help/gl/help.hhp help/gl/help.wxh help/gl/intro.htm help/gl/main_window.png help/gl/motion_options.png help/gl/NOTAS-Feito help/gl/options.htm help/gl/task_bar_icon.png help/gl/webcam.htm help/gl/wizard1.png help/gl/wizard2.png help/gl/wizard3.png help/gl/wizard4.png help/gl/wizard5.png help/gl/wizard6.png help/gl/wizard7.png help/gl/wizard8.png help/gl/wizard.htm help/gl/workspace_options.png help/gl/x_axis_calibration.png help/gl/y_axis_calibration.png \
help/ru/confirm_calibration.png help/ru/wizard1.png help/ru/wizard8.png help/ru/help.hhp help/ru/help.hhk help/ru/intro.htm help/ru/environment.htm help/ru/task_bar_icon.png help/ru/wizard6.png help/ru/click.htm help/ru/y_axis_calibration.png help/ru/wizard7.png help/ru/help.hhc help/ru/wizard5.png help/ru/calibration.htm help/ru/click_bar_thin.png help/ru/fps.png help/ru/wizard2.png help/ru/main_window.png help/ru/hotkeys_options.png help/ru/wizard4.png help/ru/motion_options.png help/ru/advanced_options.png help/ru/webcam.htm help/ru/contents.htm help/ru/general_options.png help/ru/wizard3.png help/ru/wizard.htm help/ru/options.htm help/ru/x_axis_calibration.png help/ru/workspace_options.png help/ru/click_options.png help/ru/click_bar.png help/ru/environment.png
