noinst_HEADERS = dwellaction.h mousecontrol.h wxappbar.h configbase.h configmanager.h timeutil.h

INCLUDES = 
METASOURCES = AUTO

dist_noinst_DATA = wxutil.vcproj

noinst_LTLIBRARIES = libwxutil.la

libwxutil_la_LDFLAGS = $(all_libraries)

libwxutil_la_SOURCES = wxappbar.cpp mousecontrol.cpp dwellaction.cpp configbase.cpp configmanager.cpp timeutil.cpp


